[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprobe"
version = "0.1.0"
description = "Testing framework for multi-step, multi-agent AI workflows. Test agent behavior, not just outputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rushi Chavda", email = "chavdarushi5261@gmail.com" },
]
keywords = ["ai", "agents", "testing", "evaluation", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.entry-points.pytest11]
agentprobe = "agentprobe.pytest_plugin"

[project.urls]
Homepage = "https://github.com/rushichavda/agentprobe"
Repository = "https://github.com/rushichavda/agentprobe"
Issues = "https://github.com/rushichavda/agentprobe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentprobe"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
